# habit_tracker

./: .coveragerc  .env.sample  .gitignore  Dockerfile  README.md  coverage  docker-compose.yaml  dump.rdb  pyproject.toml  requirements.txt  setup.cfg
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: admin.py  apps.py  models.py  paginations.py  paginatirs.py  permissions.py  serializer.py  serializers.py  services.py  tasks.py  telegram.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: bot.py
habits/migrations/: 0001_initial.py  0002_habit_last_action.py  0002_habit_send_date_alter_habit_action_and_more.py  0002_initial.py  0003_alter_reward_options_habit_reward.py  0004_remove_habit_reward_habit_reward_content_type_and_more.py  0005_habit_time_for_habit.py  0006_alter_habit_time_for_habit.py  0007_alter_habit_time_for_habit.py  0008_alter_habit_owner.py  0009_alter_habit_frequency.py  0010_habit_last_remember.py  0011_alter_habit_frequency.py
users/: admin.py  models.py  paginations.py  permissions.py  serializer.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/: __init__.py
users/management/commands/: __init__.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_user_chat_id.py  0002_user_tg_chat_id.py  0003_remove_user_tg_nickname_user_tg_id.py  0004_remove_user_username.py
