[tool.poetry]
name = "habit_tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.4.0"
psycopg2 = "^2.9.9"
drf-yasg = "^1.21.7"
setuptools = "^70.2.0"
django-cors-headers = "^4.4.0"
requests = "^2.32.3"
redis = "^5.0.7"
celery = "^5.4.0"
gevent = "^24.2.1"
coverage = "^7.5.4"
django-celery-beat = "^2.6.0"
python-dotenv = "^1.0.1"
flake8 = "^7.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"